@@ -199,7 +199,7 @@ class cVideo
 		bool SetCECMode(VIDEO_HDMI_CEC_MODE) { return true; };
 		void SetCECAutoView(bool) { return; };
 		void SetCECAutoStandby(bool) { return; };
-		void ShowPicture(const char * fname, const char *_destname = NULL);
+		bool ShowPicture(const char * fname, const char *_destname = NULL);
 		void StopPicture();
 		void Standby(unsigned int bOn);
 		void Pig(int x, int y, int w, int h, int osd_w = 1064, int osd_h = 600, int startx = 0, int starty = 0, int endx = 1279, int endy = 719);
