@@ -1,3 +1,7 @@
+2018-01-12 GetAway1 <get-away@t-online.de>
+
+	ShowPicture: return boolean expression
+
 2018-04-27  Thilo Graf  <dbt@novatux.de>
 
 	update to version 1.0.4-mpx
